Changes in version 0.5 (2004-04-29)
-----------------------------------

* Added single sign on support via Yale Central Authentication Service (CAS)
* Added full support for HTTP Basic Authentication
* Added caching for DaoAuthenticationProvider successful authentications
* Added Burlap and Hessian remoting to Contacts sample application
* Added pluggable password encoders including plaintext, SHA and MD5
* Added pluggable salt sources to enhance security of hashed passwords
* Added FilterToBeanProxy to obtain filters from Spring application context
* Added support for prepending strings to roles created by JdbcDaoImpl
* Added support for user definition of SQL statements used by JdbcDaoImpl
* Added definable prefixes to avoid expectation of "ROLE_" GrantedAuthoritys
* Added pluggable AuthenticationEntryPoints to SecurityEnforcementFilter
* Added Apache Ant path syntax support to SecurityEnforcementFilter
* Added filter to automate web channel requirements (eg HTTPS redirection)
* Updated JAR to Spring 1.0.1
* Updated several classes to use absolute (not relative) redirection URLs
* Refactored filters to use Spring application context lifecycle support
* Improved constructor detection of nulls in User and other key objects
* Fixed FilterInvocation.getRequestUrl() to also include getPathInfo()
* Fixed Contacts sample application <A></A> tags
* Established acegisecurity-developer mailing list
* Documentation improvements

Changes in version 0.4 (2004-04-03)
-----------------------------------

* Added HTTP session authentication as an alternative to container adapters
* Added HTTP request security interceptor (offers considerable flexibility)
* Added security taglib
* Added Clover test coverage instrumentation (currently 97.2%)
* Added support for Catalina (Tomcat) 4.1.30 to in-container integration tests
* Added HTML test and summary reporting to in-container integration tests
* Updated JARs to Spring Framework release 1.0, with associated AOP changes